--- a/Client Android/MShiper1/app/src/main/AndroidManifest.xml
+++ b/Client Android/MShiper1/app/src/main/AndroidManifest.xml
@@ -9,15 +9,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Mshipper1"
+            android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <activity
+            android:name=".Activity_Splash"
+            android:theme="@style/FullScreen">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name=".Activity_login"
+            android:theme="@style/FullScreen">
+
         </activity>
     </application>
+
 
 </manifest>
