Modify Map --> fragment

--- a/Client Android/MShiper1/app/src/main/AndroidManifest.xml
+++ b/Client Android/MShiper1/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         </activity>
 
         <activity
-            android:name=".fragment.Fragment_Maps"
+            android:name=".ActivityFragmentMap"
             android:theme="@style/FullScreen">
 
             <intent-filter>
