--- a/Client Android/MShiper1/app/build.gradle
+++ b/Client Android/MShiper1/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.google.maps.android:android-maps-utils:0.4+'
     compile 'com.android.support:cardview-v7:25.2.0'
+    compile 'com.android.support.constraint:constraint-layout:+'
 }
