--- a/Client Android/MShiper1/app/src/main/AndroidManifest.xml
+++ b/Client Android/MShiper1/app/src/main/AndroidManifest.xml
@@ -59,8 +59,10 @@
             android:theme="@style/FullScreen" />
         <activity
             android:name=".ActivityFragmentMap"
-            android:theme="@style/FullScreen">
-        </activity>
+            android:theme="@style/FullScreen" />
+        <activity
+            android:name=".activity.NotifyActivity"
+            android:theme="@style/FullScreen"/>
     </application>
 
 </manifest>
