--- a/Client Android/MShiper1/app/src/main/AndroidManifest.xml
+++ b/Client Android/MShiper1/app/src/main/AndroidManifest.xml
@@ -63,6 +63,6 @@
         <activity
             android:name=".activity.NotifyActivity"
             android:theme="@style/FullScreen"/>
+        <service android:name=".service.LocationService"/>
     </application>
-
 </manifest>
