--- a/Client Android/MShiper1/app/src/main/AndroidManifest.xml
+++ b/Client Android/MShiper1/app/src/main/AndroidManifest.xml
@@ -64,5 +64,6 @@
             android:name=".activity.NotifyActivity"
             android:theme="@style/FullScreen"/>
         <service android:name=".service.LocationService"/>
+        <receiver android:name=".MainActivity$AlarmReceiver"/>
     </application>
 </manifest>
