--- a/Client Android/MShiper1/app/build.gradle
+++ b/Client Android/MShiper1/app/build.gradle
@@ -37,4 +37,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
+    //retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    //log
+    compile 'org.slf4j:slf4j-api:1.7.21'
 }
