--- a/Client Android/MShiper1/app/src/main/AndroidManifest.xml
+++ b/Client Android/MShiper1/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
@@ -30,7 +31,7 @@
             android:value="AIzaSyCLT3W-l8w4SOIwSaPyvlP56AS_JKTNfFo" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/FullScreen">
             <intent-filter>
@@ -65,6 +66,6 @@
             android:name=".activity.NotifyActivity"
             android:theme="@style/FullScreen"/>
         <service android:name=".service.LocationService"/>
-        <receiver android:name=".MainActivity$AlarmReceiver"/>
+        <receiver android:name=".activity.MainActivity$AlarmReceiver"/>
     </application>
 </manifest>
