--- a/Client Android/MShiper1/app/src/main/AndroidManifest.xml
+++ b/Client Android/MShiper1/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
             android:name=".Activity_Splash"
             android:label="@string/app_name"
             android:noHistory="true"
+            android:screenOrientation="portrait"
             android:theme="@style/SplashTheme">
 
             <intent-filter>
@@ -67,6 +68,7 @@
             android:theme="@style/FullScreen" />
         <activity
             android:name=".activity.MainActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/FullScreen" />
         <activity
             android:name=".fragment.FragmentChart"
