--- a/Client Android/MShiper1/app/build.gradle
+++ b/Client Android/MShiper1/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     // FCM
     compile 'com.google.firebase:firebase-core:11.2.0'
     compile 'com.google.firebase:firebase-messaging:11.2.0'
@@ -48,6 +49,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:multidex:1.0.1'
     testCompile 'junit:junit:4.12'
     // sửa conflict
     androidTestCompile 'com.google.code.findbugs:jsr305:3.0.2'
