--- a/Client Android/MShiper1/app/src/main/AndroidManifest.xml
+++ b/Client Android/MShiper1/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <permission
         android:name="com.example.dangvanan14.mshiper1.permission.C2D_MESSAGE"
@@ -52,10 +52,9 @@
         </activity>
 
         <!--<activity-->
-            <!--android:name=".NotificationTest"-->
-            <!--android:label="@string/app_name"-->
-            <!--android:theme="@style/FullScreen">-->
-
+        <!--android:name=".NotificationTest"-->
+        <!--android:label="@string/app_name"-->
+        <!--android:theme="@style/FullScreen">-->
         <!--</activity>-->
 
         <activity
@@ -69,8 +68,8 @@
         <activity
             android:name=".activity.MainActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/MyNoActionBar" />
+            android:theme="@style/MyNoActionBar"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".fragment.FragmentChart"
             android:theme="@style/MyNoActionBar" />
@@ -85,57 +84,62 @@
             android:theme="@style/MyNoActionBar" />
         <activity
             android:name=".activity.NotifyActivity"
-            android:theme="@style/MyNoActionBar"/>
+            android:theme="@style/MyNoActionBar" />
 
         <activity
             android:name=".activity.MapActivity"
-            android:theme="@style/MyNoActionBar"/>
+            android:theme="@style/MyNoActionBar" />
+
+        <activity
+            android:name=".activity.ContactActivity"
+            android:theme="@style/MyNoActionBar" />
 
         <activity
             android:name=".activity.ChatActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/MyNoActionBar"/>
-        <service android:name=".service.LocationService"/>
+            android:theme="@style/MyNoActionBar"
+            android:windowSoftInputMode="adjustResize" />
+
+        <service android:name=".service.LocationService" />
 
         <!--<receiver-->
-            <!--android:name="com.google.android.gms.gcm.GcmReceiver"-->
-            <!--android:exported="true"-->
-            <!--android:permission="com.google.android.c2dm.permission.SEND" >-->
-            <!--<intent-filter>-->
-                <!--<action android:name="com.google.android.c2dm.intent.RECEIVE" />-->
-                <!--<category android:name="com.example.gcm" />-->
-            <!--</intent-filter>-->
+        <!--android:name="com.google.android.gms.gcm.GcmReceiver"-->
+        <!--android:exported="true"-->
+        <!--android:permission="com.google.android.c2dm.permission.SEND" >-->
+        <!--<intent-filter>-->
+        <!--<action android:name="com.google.android.c2dm.intent.RECEIVE" />-->
+        <!--<category android:name="com.example.gcm" />-->
+        <!--</intent-filter>-->
         <!--</receiver>-->
 
         <!--<service-->
-            <!--android:name="com.example.dangvanan14.mshiper1.notification.GCMService"-->
-            <!--android:exported="false" >-->
-            <!--<intent-filter>-->
-                <!--<action android:name="com.google.android.c2dm.intent.RECEIVE" />-->
-            <!--</intent-filter>-->
+        <!--android:name="com.example.dangvanan14.mshiper1.notification.GCMService"-->
+        <!--android:exported="false" >-->
+        <!--<intent-filter>-->
+        <!--<action android:name="com.google.android.c2dm.intent.RECEIVE" />-->
+        <!--</intent-filter>-->
         <!--</service>-->
 
         <!--<service-->
-            <!--android:name="com.example.dangvanan14.mshiper1.notification.GCMInstanceIDListenerService"-->
-            <!--android:exported="false">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="com.google.android.gms.iid.InstanceID"/>-->
-            <!--</intent-filter>-->
+        <!--android:name="com.example.dangvanan14.mshiper1.notification.GCMInstanceIDListenerService"-->
+        <!--android:exported="false">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="com.google.android.gms.iid.InstanceID"/>-->
+        <!--</intent-filter>-->
         <!--</service>-->
 
         <!--<service-->
-            <!--android:name="com.example.dangvanan14.mshiper1.notification.RegistrationIntentService"-->
-            <!--android:exported="false">-->
+        <!--android:name="com.example.dangvanan14.mshiper1.notification.RegistrationIntentService"-->
+        <!--android:exported="false">-->
         <!--</service>-->
 
         <service android:name=".service.MyFirebaseMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
         <service android:name=".service.MyFirebaseIDService">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
     </application>
