--- a/Client Android/MShiper1/app/build.gradle
+++ b/Client Android/MShiper1/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.example.dangvanan14.mshiper1"
         minSdkVersion 19
@@ -65,5 +65,6 @@ dependencies {
         exclude group: 'org.json', module: 'json'
     }
     compile 'com.roughike:bottom-bar:2.3.1'
+    compile 'com.thoughtbot:expandablerecyclerview:1.3'
 }
 apply plugin: 'com.google.gms.google-services'
